Changes to smal size template

--- a/index.html
+++ b/index.html
@@ -615,13 +615,13 @@
                     </div>
                 </div>
 
-                <div class="col-md-8" id="bottom-buttons"></div>
-                <div class="col-md-12" id="preview">
+                
+                <div class="col-md-12 col-sm-12" id="preview">
                     <p class="form-control" id="code-preview">
                         
                     </p>
                 </div>
-                <div class="col-md-12" >
+                <div class="col-md-12 col-sm-12" >
                     <ul id="footer">
                         <li>Made by Deyan Dimov <span>- West Monroe Partners Chicago, 2016</span></li>
                     </ul>
