Fixed buttons to be labeled correctly

--- a/index.html
+++ b/index.html
@@ -670,8 +670,7 @@
                         <div class="col-md-8 col-sm-12">
                     
                             <button id="add-meet-up" class="btn" >Add Meetup</button>
-                            <button id="generate-html" class="btn" >Generate</button>
-                            <button id="download-html" class="btn" >Download</button><br /><br />
+                            <button id="generate-html" class="btn" >Generate &#38; Download</button><br /><br />
                            
                         </div>
                     </div>
