Super Minor cosmetic change

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
             #add-meet-up, #generate-html{
                 margin-top: 20px;
                 font-size: 20px;
-                width: 150px;
+                width: 200px;
                 margin-right: 25px;
                 background: solid;
                 background-color:#E0E0E0;
@@ -670,7 +670,7 @@
                         <div class="col-md-8 col-sm-12">
                     
                             <button id="add-meet-up" class="btn" >Add Meetup</button>
-                            <button id="generate-html" class="btn" >Generate &#38; Download</button><br /><br />
+                            <button id="generate-html" class="btn" >Generate/Download</button><br /><br />
                            
                         </div>
                     </div>
