--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src='js/moment.min.js'></script>
         <script src='js/FileSaver.js'></script>
         <script src='meetupAPI.js'></script>
+        <script src='js/form-interface.js'></script>
         <!--<script src='js/meetup-database.js'></script>-->
         <script type="text/javascript"> 
         $( 
